--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "multer": "^1.4.5-lts.1",
+    "pug": "^3.0.2",
     "router": "^1.3.7"
   }
 }
